--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,3 +24,25 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+
+.container-left{
+  margin-left: 256px;
+    width: 320px;
+    height: 687px;
+    /*margin-right: -12px;*/
+}
+.btn-user{
+  border-radius: 10px;
+}
+.new-user{
+  border-radius: 10px;
+}
+
+.form{
+
+    margin: 205px;
+    position: relative;
+    bottom: 202px;
+    right: 192px;
+}
